pkg/kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: webservice
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webservice
      tier: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1
  template:
    metadata:
      labels:
        app: webservice
        tier: backend
    spec:
      containers:
        - name: backend
          image: docker.io/habuvo/webservice:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8000
      restartPolicy: Always
