pkg/kubernetes/postgre-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - image: postgres:latest
          name: postgres
          volumeMounts:
            - name: postgresql
              mountPath: /data/pgdata
      volumes:
        - name: postgresql
          persistentVolumeClaim:
            claimName: postgresclaim
