pkg/kubernetes/postgre-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  selector:
    matchLabels:
      app: webservice
      tier: postgres
  replicas: 2
  template:
    metadata:
      labels:
        app: webservice
        tier: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          volumeMounts:
            - name: postgres
              mountPath: /data
              subPath: postgres
          ports:
            - containerPort: 5432
              name: postgredb
  volumeClaimTemplates:
    - metadata:
        name: postgresclaim
        labels:
          app: webservice
          tier: postgres
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
