pkg/kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: webservice
    tier: backend
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: webservice
    tier: backend
