pkg/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webservice
  labels:
    app: webservice
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: webservice
